--- a/src/main/resources/templates/profile/edit.html
+++ b/src/main/resources/templates/profile/edit.html
@@ -33,7 +33,7 @@
                     Select city
                 </div>
                 <div class="search-box">
-                    <input type="text" placeholder="Start typing...">
+                    <input type="text" class="search-field" placeholder="Start typing...">
                 </div>
                 <input type="hidden" name="cityName" id="cityName" th:value="${cityName}">
                 <input type="hidden" name="cityId" id="cityId">
@@ -48,7 +48,7 @@
                     Select university
                 </div>
                 <div class="search-box">
-                    <input type="text" placeholder="Start typing...">
+                    <input type="text" class="search-field" placeholder="Start typing...">
                 </div>
                 <input type="hidden" name="universityName" id="universityName" th:value="${universityName}">
                 <input type="hidden" name="universityId" id="universityId">
