--- a/src/main/resources/static/styles/layout.css
+++ b/src/main/resources/static/styles/layout.css
@@ -4,6 +4,7 @@ body {
     background-color: #f1f1f1;
 }
 
+
 div {
     font-size: 18px;
     font-family: "Roboto", sans-serif;
@@ -66,6 +67,17 @@ header a:hover {
 .column_block {
     display: flex;
     flex-direction: column;
+}
+
+.inputs {
+    display: flex;
+    flex-direction: column;
+    margin: 10px;
+}
+
+.inputs > div {
+    margin-top: 20px;
+    margin-right: 20px;
 }
 
 .items {
