--- a/src/main/resources/static/styles/profile.css
+++ b/src/main/resources/static/styles/profile.css
@@ -1,6 +1,10 @@
-input {
-    pointer-events: none;
-    border: none;
+input[type="text"], input[type="number"] {
+    font-size: 16px;
+    padding: 10px;
+}
+
+input[type="text"] {
+    width: 100%;
 }
 
 .img_wrap {
@@ -35,23 +39,4 @@ input {
     margin-right: 20px;
     padding: 10px;
     width: 100%;
-}
-
-.t1 {
-    font-weight: bold;
-    font-size: px;
-}
-
-.b1 {
-    background-color: #4CAF50;
-    color: white;
-    padding: 14px 20px;
-    text-decoration: none;
-    border: none;
-    cursor: pointer;
-    width: 400px;
-}
-
-.b1:hover {
-    background-color: #429144;
 }
