--- a/src/main/resources/static/styles/selectbox.css
+++ b/src/main/resources/static/styles/selectbox.css
@@ -85,21 +85,20 @@ body::-webkit-scrollbar {
     display: none;
 }
 
-.search-box input {
-    width: 100%;
+.search-field {
+    width: 630px !important;
     padding: 12px 16px;
     font-family: "Roboto", sans-serif;
     font-size: 16px;
     position: absolute;
-    border-radius: 8px 8px 0 0;
     z-index: 100;
-    border: 8px solid #f1f1f1;
+    border: 1px solid black;
     opacity: 0;
     pointer-events: none;
     transition: all 0.5s;
 }
 
-.search-box input:focus {
+.search-field:focus {
     outline: none;
 }
 
