fill profile popup

--- a/src/main/resources/templates/pages/profile.html
+++ b/src/main/resources/templates/pages/profile.html
@@ -133,7 +133,7 @@
                         <input type="file" id="imageField">
                     </div>
                 </div>
-                <button class="btn1 blue">Apply</button>
+                <button class="btn1 blue">Сохранить</button>
             </div>
         </div>
     </div>
