--- a/src/main/resources/templates/pages/users.html
+++ b/src/main/resources/templates/pages/users.html
@@ -14,7 +14,27 @@
         <div class="page-content">
             <div class="page">
                 <div class="header">
-                    <h5>Участники</h5>
+                    <div>
+                        <h5>Участники</h5>
+                        <div class="column_block">
+                            <label for="option-1">
+                                <input type="radio" id="option-1" class="mdl-radio__button"
+                                       name="options" value="all"
+                                       checked>
+                                <span class="mdl-radio__label">Все</span>
+                            </label>
+                            <label for="option-2">
+                                <input type="radio" id="option-2" class="mdl-radio__button"
+                                       name="options" value="ready">
+                                <span class="mdl-radio__label">Заполнившие профиль</span>
+                            </label>
+                            <label for="option-2">
+                                <input type="radio" id="option-3" class="mdl-radio__button"
+                                       name="options" value="not_ready">
+                                <span class="mdl-radio__label">Не заполнившие профиль</span>
+                            </label>
+                        </div>
+                    </div>
                     <div>
                         <div class="mdl-textfield mdl-js-textfield mdl-textfield--expandable">
                             <label class="mdl-button mdl-js-button mdl-button--icon" for="field">
@@ -55,11 +75,6 @@
 <div th:insert="fragments::scripts"></div>
 <script type="text/javascript" src="/js/users.js"></script>
 <script type="text/javascript">
-    async function search() {
-        let word = document.getElementById("field").value
-        await fillUsers(await loadUsers(word))
-    }
-
     onLoadUsersPage()
 </script>
 <script type="text/javascript" src="/js/emailPopup.js"></script>
