add event status

--- a/src/main/resources/templates/pages/users.html
+++ b/src/main/resources/templates/pages/users.html
@@ -14,8 +14,8 @@
         <div class="page-content">
             <div class="page">
                 <div class="header">
-                    <div>
-                        <h5>Участники</h5>
+                    <div class="row_block ">
+                        <h5 style="margin-right: 20px">Участники</h5>
                         <div class="column_block">
                             <label for="option-1">
                                 <input type="radio" id="option-1" class="mdl-radio__button"
