--- a/src/main/resources/templates/profile/change_password.html
+++ b/src/main/resources/templates/profile/change_password.html
@@ -14,29 +14,28 @@
             <span th:if="${error}" th:text="${error}"></span>
         </div>
 
-        <h2>Reset your password</h2>
-        <div>Old password
+        <h2>Измените пароль</h2>
+        <div>Старый пароль
             <input type="password" name="oldPassword"
                    pattern="[a-zA-Z0-9]{8,}"
                    placeholder="Your old password"
                    required="required">
         </div>
-        <div>New password
+        <div>Новый пароль
             <input type="password" name="newPassword"
                    id="newPassword"
                    pattern="[a-zA-Z0-9]{8,}"
                    placeholder="At least 8 letters or digits"
                    required="required">
         </div>
-        <div>Confirm new password
+        <div>Подтвердите новый пароль
             <input type="password"
                    id="confirmPassword"
                    pattern="[a-zA-Z0-9]{8,}"
                    placeholder="Confirm new password"
                    required="required">
         </div>
-        <button type="submit" value="Apply">Apply</button>
-        <a href="/profile">Back to profile</a>
+        <button type="submit" value="Apply">Сохранить</button>
     </form>
 </div>
 <script>
