--- a/src/main/resources/templates/pages/users.html
+++ b/src/main/resources/templates/pages/users.html
@@ -15,23 +15,23 @@
             <div class="page">
                 <div class="header">
                     <div class="row_block ">
-                        <h5 style="margin-right: 20px">Участники</h5>
+                        <h5 style="margin-right: 20px">Учасники</h5>
                         <div class="column_block">
                             <label for="option-1">
                                 <input type="radio" id="option-1" class="mdl-radio__button"
                                        name="options" value="all"
                                        checked>
-                                <span class="mdl-radio__label">Все</span>
+                                <span class="mdl-radio__label">Усі</span>
                             </label>
                             <label for="option-2">
                                 <input type="radio" id="option-2" class="mdl-radio__button"
                                        name="options" value="ready">
-                                <span class="mdl-radio__label">Заполнившие профиль</span>
+                                <span class="mdl-radio__label">Заповнили профіль</span>
                             </label>
                             <label for="option-2">
                                 <input type="radio" id="option-3" class="mdl-radio__button"
                                        name="options" value="not_ready">
-                                <span class="mdl-radio__label">Не заполнившие профиль</span>
+                                <span class="mdl-radio__label">Не заповнили профіль</span>
                             </label>
                         </div>
                     </div>
@@ -46,9 +46,9 @@
                             </div>
                         </div>
                         <div class="dropdown">
-                            <button class="dropbtn">Действия</button>
+                            <button class="dropbtn">Опції</button>
                             <div class="dropdown-content">
-                                <a href="#emailPopup" class="popup__link">Рассылка</a>
+                                <a href="#emailPopup" class="popup__link">Розсилка</a>
                             </div>
                         </div>
                     </div>
