--- a/src/main/resources/static/styles/profile.css
+++ b/src/main/resources/static/styles/profile.css
@@ -1,9 +1,9 @@
-input[type="text"], input[type="number"] {
+input[type="text"], input[type="number"], input[type="password"] {
     font-size: 16px;
     padding: 10px;
 }
 
-input[type="text"] {
+input[type="text"], input[type="password"] {
     width: 100%;
 }
 
